Add spotbugs plugin to project #6